--- a/multi-page-app-with-react-master/src/components/Menu.css
+++ b/multi-page-app-with-react-master/src/components/Menu.css
@@ -12,7 +12,7 @@
 
 /* This class is applied to the containing div <div class="nav"> and is used to set the background color and height of the navbar */
 .nav {
-  background: #000;
+  background: #d9f7be;
   height: 60px; /* set same as height & line-height below */
 }
 
