Coupons and Changes to Icon sizes

--- a/multi-page-app-with-react-master/src/components/Menu.css
+++ b/multi-page-app-with-react-master/src/components/Menu.css
@@ -5,7 +5,7 @@
 
 .Menu {
     color: #808080;
-    font-family: 'MenuFont';
+    font-family: 'Papyrus';
     list-style-type: square;
     font-size: large;
 }
